Bug 408529 - regression: cannot delete multiple cell contents at once
Summary: regression: cannot delete multiple cell contents at once
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-06-10 14:36 UTC by Uwe Stöhr
Modified: 2019-06-10 22:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments
test case (17.52 KB, application/gzip)
2019-06-10 14:36 UTC, Uwe Stöhr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Uwe Stöhr 2019-06-10 14:36:59 UTC
Created attachment 120751 [details]
test case

- open the attached file and try to delete in the first column the content of cell 
2 to 8

result: this is impossible. Neither DEL, SHIFT +DEL or anything else works to delete. This is a regression to former LabPlot versions and very annoying.

p.s. In the bug tracker I cannot specify the LabPlot version 2.5.0 or 2.6.0
Comment 1 Uwe Stöhr 2019-06-10 16:29:05 UTC
OK, I see now that I can
- select the cells
- right-click on them and choose in the appearing context menu Selection -> Clear Selection

So could you please add a shortcut for this function. E.g. Shift+Del?
Comment 2 Alexander Semke 2019-06-10 22:01:17 UTC
Git commit 081714b7549d24bafa90d92598a1d394aba1fc1f by Alexander Semke.
Committed on 10/06/2019 at 22:00.
Pushed by asemke into branch 'master'.

Allow to use DEL to delete cells in spreadsheet and matrix.
FIXED-IN: 2.7

M  +4    -0    src/backend/core/AbstractPart.h
M  +8    -0    src/backend/matrix/Matrix.cpp
M  +3    -0    src/backend/matrix/Matrix.h
M  +8    -1    src/backend/spreadsheet/Spreadsheet.cpp
M  +3    -0    src/backend/spreadsheet/Spreadsheet.h
M  +9    -1    src/backend/worksheet/Worksheet.cpp
M  +4    -1    src/backend/worksheet/Worksheet.h
M  +10   -1    src/commonfrontend/core/PartMdiView.cpp
M  +2    -1    src/commonfrontend/core/PartMdiView.h
M  +8    -1    src/commonfrontend/matrix/MatrixView.cpp
M  +5    -1    src/commonfrontend/matrix/MatrixView.h
M  +9    -1    src/commonfrontend/spreadsheet/SpreadsheetView.cpp
M  +4    -1    src/commonfrontend/spreadsheet/SpreadsheetView.h
M  +42   -20   src/commonfrontend/worksheet/WorksheetView.cpp
M  +5    -1    src/commonfrontend/worksheet/WorksheetView.h

https://commits.kde.org/labplot/081714b7549d24bafa90d92598a1d394aba1fc1f