Allow to use DEL to delete cells in spreadsheet and matrix.

BUG: 408529
FIXED-IN: 2.7